# sc4_region_generator

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  city_plotter.cpp  city_plotter.hpp  config.hpp  config_reader.cpp  config_reader.hpp  create_region.sh  heightmap.cpp  heightmap.hpp  main.cpp  plot.py  reg_gen.cfg
